# pubmed-rag

./: .gitignore  Dockerfile  README.md  config.yaml  create_db.py  get_embeddings.py  get_pmid_vdb.sh  main.py  pyproject.toml  requirements.txt  run_query.py  run_search.py  use_rag.py
demo/: .gitignore  config.yaml  demo_pmids.csv
notebooks/: 25971816.xml  PMC4448285.xml  bkgr_workspace.ipynb  gen_workspace.ipynb  pmcid.ipynb  vxb_workspace.ipynb
pubmed_rag/: bioc.py  create_db.py  get_embeddings.py  get_pmid_vector_db.py  model.py  run_search.py  use_rag.py  utils.py
pubmed_rag/helpers/: bioc.py  model.py  utils.py
