[tool.poetry]
name = "pubmed-rag"
version = "0.1.0"
description = ""
authors = ["Angel L. P. <59593766+angelphanth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
nltk = "^3.9.1"
openpyxl = "^3.1.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
