[tool.poetry]
name = "pubmed-rag"
version = "0.1.0"
description = ""
authors = ["Angel L. P. <59593766+angelphanth@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
nltk = "^3.9.1"
openpyxl = "^3.1.5"
requests = "^2.32.3"
pyyaml = "^6.0.2"
transformers = "^4.44.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
tensorflow = "^2.17.0"
flax = "^0.9.0"
tf-keras = "^2.17.0"
pymilvus = "^2.4.6"
accelerate = "^1.0.0"
ollama = "^0.3.3"
cloud-tpu-client = "^0.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
